--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,50 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Note-Taking App</title>
-    <style>
-        body { font-family: Arial, sans-serif; text-align: center; }
-        input, button { margin: 5px; padding: 10px; }
-    </style>
+    <title>Notes App</title>
+
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<h1>Notes App</h1>
 
-<h2>Simple Note-Taking App</h2>
-<input type="text" id="noteInput" placeholder="Enter your note">
-<button onclick="addNote()">Add Note</button>
+<!-- Form to add a note -->
+<form id="note-form">
+    <input type="text" id="title" placeholder="Enter title" required>
+    <input type="text" id="content" placeholder="Enter content" required>
+    <button type="submit">Add Note</button>
+</form>
 
-<h3>Notes:</h3>
-<ul id="notesList"></ul>
+<!-- List of notes -->
+<ul id="notes-list"></ul>
 
-<script>
-    function fetchNotes() {
-        fetch("http://localhost:8080/notes")
-            .then(response => response.json())
-            .then(data => {
-                let list = document.getElementById("notesList");
-                list.innerHTML = "";
-                data.forEach(note => {
-                    let li = document.createElement("li");
-                    li.textContent = note.content;
-                    list.appendChild(li);
-                });
-            });
-    }
-
-    function addNote() {
-        let noteInput = document.getElementById("noteInput").value;
-        fetch("http://localhost:8080/notes", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ content: noteInput })
-        }).then(() => {
-            document.getElementById("noteInput").value = "";
-            fetchNotes();
-        });
-    }
-
-    fetchNotes();
-</script>
-
+<!-- Link to JavaScript -->
+<script src="App.js"></script>
 </body>
 </html>
